{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 2172,
  "lineage": "2490d3ad-30bb-c660-d7b3-8fdbd87402e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ctf_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023ff3d4ab11b2525",
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:instance/i-020223294e9af69f8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SSMInstanceProfile-New",
            "id": "i-020223294e9af69f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059b09337038c79ce",
            "private_dns": "ip-10-0-1-221.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-52-194-250-221.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.194.250.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a9539720fc0f746",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00395cd3a7348fd0f",
            "tags": {
              "Name": "CTF-Instance"
            },
            "tags_all": {
              "Name": "CTF-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052b2981de3e15200"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.ssm_sg",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ctf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:internet-gateway/igw-0b4344441a714394f",
            "id": "igw-0b4344441a714394f",
            "owner_id": "585768187155",
            "tags": {
              "Name": "CTF-InternetGateway"
            },
            "tags_all": {
              "Name": "CTF-InternetGateway"
            },
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "dependencies": [
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ctf_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:route-table/rtb-057d2e08048275e90",
            "id": "rtb-057d2e08048275e90",
            "owner_id": "585768187155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4344441a714394f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CTF-RouteTable"
            },
            "tags_all": {
              "Name": "CTF-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ctf_igw",
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ctf_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cedb86672a429a30",
            "route_table_id": "rtb-057d2e08048275e90",
            "subnet_id": "subnet-00395cd3a7348fd0f"
          },
          "dependencies": [
            "aws_internet_gateway.ctf_igw",
            "aws_route_table.ctf_route_table",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:security-group/sg-052b2981de3e15200",
            "description": "Allow SSM traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052b2981de3e15200",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SSM-SecurityGroup",
            "name_prefix": "",
            "owner_id": "585768187155",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ctf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:subnet/subnet-00395cd3a7348fd0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00395cd3a7348fd0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "585768187155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CTF-Subnet"
            },
            "tags_all": {
              "Name": "CTF-Subnet"
            },
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "dependencies": [
            "aws_vpc.ctf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ctf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:vpc/vpc-018f97861c4bd0f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2055dd51480e3f5",
            "default_route_table_id": "rtb-01da5acb8b2bfca48",
            "default_security_group_id": "sg-0b524ea95c093b2a6",
            "dhcp_options_id": "dopt-0ac1ebf60f0663cbd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018f97861c4bd0f0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01da5acb8b2bfca48",
            "owner_id": "585768187155",
            "tags": {
              "Name": "CTF-VPC"
            },
            "tags_all": {
              "Name": "CTF-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:vpc-endpoint/vpce-0af3f5fd7ddd89138",
            "dns_entry": [
              {
                "dns_name": "vpce-0af3f5fd7ddd89138-wte1u0kk.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0af3f5fd7ddd89138-wte1u0kk-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z07743553CG0HQHGE6V98"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0af3f5fd7ddd89138",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a532d4fb049f51a3"
            ],
            "owner_id": "585768187155",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-052b2981de3e15200"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.196",
                "subnet_id": "subnet-00395cd3a7348fd0f"
              }
            ],
            "subnet_ids": [
              "subnet-00395cd3a7348fd0f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "dependencies": [
            "aws_security_group.ssm_sg",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:vpc-endpoint/vpce-08c81b4ce09a9e864",
            "dns_entry": [
              {
                "dns_name": "vpce-08c81b4ce09a9e864-6tjaus39.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-08c81b4ce09a9e864-6tjaus39-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02720823K7YWNNUDR8IA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08c81b4ce09a9e864",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02bfed06f64e3e397"
            ],
            "owner_id": "585768187155",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-052b2981de3e15200"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.154",
                "subnet_id": "subnet-00395cd3a7348fd0f"
              }
            ],
            "subnet_ids": [
              "subnet-00395cd3a7348fd0f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "dependencies": [
            "aws_security_group.ssm_sg",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:585768187155:vpc-endpoint/vpce-0476847fd9286c21e",
            "dns_entry": [
              {
                "dns_name": "vpce-0476847fd9286c21e-gq1e2656.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0476847fd9286c21e-gq1e2656-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z01676452CVLR1D09NZZR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0476847fd9286c21e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0fe8c16d056313be2"
            ],
            "owner_id": "585768187155",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-052b2981de3e15200"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.117",
                "subnet_id": "subnet-00395cd3a7348fd0f"
              }
            ],
            "subnet_ids": [
              "subnet-00395cd3a7348fd0f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-018f97861c4bd0f0d"
          },
          "dependencies": [
            "aws_security_group.ssm_sg",
            "aws_subnet.ctf_subnet",
            "aws_vpc.ctf_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}